assets/css/style.scss
---
---

@import "jekyll-theme-hacker";

/* Use the variables */




iframe {
  margin-top: 40px;
  margin-bottom: 40px;
  display: block;
  float: none;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}
a{
  font-size:20px;
  text-decoration:none;
}
img {
  margin-top: 40px;
  margin-bottom: 40px;
  display: block;
  float: none;
  // margin-left: auto;
  // margin-right: auto;
  width: auto;  
  height: auto;
  max-width: 100%;
}

